k8s-efk/es/es-endpoint.yml
apiVersion: v1
kind: Endpoints
metadata:
  name: elasticsearch-logging
  namespace: kube-system
subsets: 
  - addresses:
    - ip: 192.168.4.32
    ports:
    - port: 31802
