k8s-efk/es/es-ingress.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: elasticsearch
---
kind: Deployment
apiVersion: apps/v1
metadata:
  labels:
    app: elasticsearch
    role: master
  name: elasticsearch-master
  namespace: elasticsearch
spec:
  replicas: 3
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: elasticsearch
      role: master
  template:
    metadata:
      labels:
        app: elasticsearch
        role: master
    spec:
      serviceAccountName: elasticsearch-admin
      containers:
      - name: elasticsearch-master
        image: docker.elastic.co/elasticsearch/elasticsearch-oss:6.2.4 
        imagePullPolicy: IfNotPresent
        command: ["bash", "-c", "ulimit -l unlimited && sysctl -w vm.max_map_count=262144 && exec su elasticsearch docker-entrypoint.sh"]
        ports:
        - containerPort: 9200
          protocol: TCP
        - containerPort: 9300
          protocol: TCP
        securityContext:
          privileged: true
#        resources:
#          limits:
#            cpu: 2
#            memory: 1Gi
---
kind: Service
apiVersion: v1
metadata:
  labels:
    app: elasticsearch
    app_hp: es-hpa
  name: elasticsearch-discovery
  namespace: elasticsearch
spec:
  ports:
  - port: 9300
    targetPort: 9300
  selector:
    app: elasticsearch
    role: master
#---
#apiVersion: autoscaling/v2beta2
#kind: HorizontalPodAutoscaler
#metadata:
#  name: elasticsearch-hpa
#  namespace: elasticsearch
#  labels:
#    role: master
#    app: elasticsearch
#spec:
#  scaleTargetRef:
#    apiVersion: apps/v1
#    kind: Deployment
#    name: elasticsearch-master
#  minReplicas: 1
#  maxReplicas: 10
#  metrics:
#  - type: Resource
#    resource:
#      name: cpu
#      target:
#        type: Utilization
#        averageUtilization: 40

#  - type: Resource
#    resource:
#      name: memory
#      target:
#        type: Utilization
#        averageUtilization: 60
---
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch-data-service
  namespace: elasticsearch
  labels:
    app: elasticsearch
    role: data
spec:
  ports:
  - port: 9200
    name: outer
  - port: 9300
    name: inner
  clusterIP: None
  selector:
    app: elasticsearch
    role: data
---
kind: StatefulSet
apiVersion: apps/v1
metadata:
  labels:
    app: elasticsearch
    role: data
  name: elasticsearch-data
  namespace: elasticsearch
spec:
  replicas: 2
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: elasticsearch
  serviceName: elasticsearch-data-service
  template:
    metadata:
      labels:
        app: elasticsearch
        role: data
    spec:
      serviceAccountName: elasticsearch-admin
      containers:
      - name: elasticsearch-data
        image: docker.elastic.co/elasticsearch/elasticsearch-oss:6.2.4
        imagePullPolicy: IfNotPresent
        command: ["bash", "-c", "ulimit -l unlimited && sysctl -w vm.max_map_count=262144 && chown -R elasticsearch:elasticsearch /usr/share/elasticsearch/data && exec su elasticsearch docker-entrypoint.sh"]
        ports:
        - containerPort: 9200
          protocol: TCP
        - containerPort: 9300
          protocol: TCP
        volumeMounts:
        - name: elasticsearch-data-volume
          mountPath: /usr/share/es/data
        securityContext:
          privileged: true
      securityContext:
        fsGroup: 1000
  volumeClaimTemplates:
  - metadata:
      name: elasticsearch-data-volume
    spec:
      accessModes: ["ReadWriteOnce"]
      storageClassName: "ceph-rbd-es"
      resources:
        requests:
          storage: 1Gi
---
kind: Service
apiVersion: v1
metadata:
  labels:
    app: elasticsearch
  name: elasticsearch-logging
  namespace: elasticsearch
spec:
  ports:
  - port: 9200
    targetPort: 9200
  selector:
    app: elasticsearch
  type: NodePort
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  labels:
    app: elasticsearch
  name: elasticsearch-ingress
  namespace: elasticsearch
spec:
  rules:
  - host: elasticsearch.kube.com
    http:
      paths:
      - backend:
          serviceName: elasticsearch-logging
          servicePort: 9200
